# orderbike

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
Bikeplanpic/: 0_Metadata.md  Paris_picture.jpg.aux.xml
notebooks/: connectivity_test.ipynb  explore_dg.ipynb  explore_efficiency.ipynb  explore_paris_bikeplan.ipynb  explore_random_distances.ipynb  igraph_networkx_directness.ipynb  igraph_speedup.ipynb  makeover.ipynb  manual_growth.ipynb  random_grid.ipynb  single_metric.ipynb  solve_connectedness_issue.ipynb  test_auc.ipynb
orderbike/: __init__.py  growth.py  metrics.py  plot.py  utils.py
scripts/: 01_compute_AUC.py  02_plot_AUC_small_multiples.py  03_plot_AUC.py  03_plot_params_AUC.json  04_plot_lineplot_average.py  05_plot_lineplot_average_merged.py  06_plot_params_met_sm.json  06_plot_small_multiples_subplots_average_wmanual_grid.py  07_plot_manual_networks.py  08_plot_distorted_grids_graphs.py  09_plot_distorted_grids_AUC.py  09_plot_params_AUC_dg.json  10_plot_selected_trials.py  11_plot_selected_growth.py  12_plot_AUC_small_multiples_add_sub.py  13_plot_toy_networks_initial_link.py  20_growth_paris.py  21_compute_AUC_paris.py  22_plot_AUC_paris.py  22_plot_params_AUC_paris.json  23_plot_lineplot_average_paris.py  23_plot_params_met_all_paris.json  24_plot_lineplot_average_merged_paris.py  24_plot_params_met_all_merged_paris.json  25_plot_small_multiples_subplots_average_paris.py  compute_AUC.py  compute_plot_AUC.py  computing_plotting_AUC_table.py  computing_plotting_AUC_trials.py  growth_grid_2.py  (+48 more)
(+63 files in other folders)
